--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#000000",
+    "theme_color": "#FFF9F4",
     "background_color": "#ffffff"
 }
