--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2"
-    }
+    },
+    "proxy": "http://3.111.128.67/"
 }
